picked up all codes with the syntax

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
         "other": true,
         "comments": true,
         "strings": false
-    }
+    },
+    
+    "python.analysis.extraPaths": ["./sources"]
 }
